@startuml

title __RESPONSE's Class Diagram__\n

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.CreateTeamResponse {
            ~ teamId : long
            {static} + builder()
            + equals()
            + getTeamId()
            + hashCode()
            + setTeamId()
            + toString()
            # canEqual()
            ~ CreateTeamResponse()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.CreateTeamResponse.CreateTeamResponseBuilder {
            - teamId : long
            + build()
            + teamId()
            + toString()
            ~ CreateTeamResponseBuilder()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.FindMatchResponse {
            ~ matchId : long
            {static} + builder()
            + equals()
            + getMatchId()
            + getResult()
            + hashCode()
            + setMatchId()
            + setResult()
            + toString()
            # canEqual()
            ~ FindMatchResponse()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.FindMatchResponse.FindMatchResponseBuilder {
            - matchId : long
            + build()
            + matchId()
            + result()
            + toString()
            ~ FindMatchResponseBuilder()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.FindMatchResponse.FindMatchResponseWriter {
            + write()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.GetConfigResponse {
            {static} + builder()
            + equals()
            + getMap()
            + hashCode()
            + setMap()
            + toString()
            # canEqual()
            ~ GetConfigResponse()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.GetConfigResponse.GetConfigResponseBuilder {
            + build()
            + map()
            + toString()
            ~ GetConfigResponseBuilder()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.GetConfigResponse.Writer {
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.GetUserInfoResponse {
            ~ username : String
            {static} + builder()
            + equals()
            + getUsername()
            + hashCode()
            + setUsername()
            + toString()
            # canEqual()
            ~ GetUserInfoResponse()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.GetUserInfoResponse.GetUserInfoResponseBuilder {
            - username : String
            + build()
            + toString()
            + username()
            ~ GetUserInfoResponseBuilder()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.JoinTeamResponse {
            ~ teamId : long
            {static} + builder()
            + equals()
            + getResult()
            + getTeamId()
            + hashCode()
            + setResult()
            + setTeamId()
            + toString()
            # canEqual()
            ~ JoinTeamResponse()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.JoinTeamResponse.JoinTeamResponseBuilder {
            - teamId : long
            + build()
            + result()
            + teamId()
            + toString()
            ~ JoinTeamResponseBuilder()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.NewUserJoinTeamResponse {
            ~ username : String
            {static} + builder()
            + equals()
            + getUsername()
            + hashCode()
            + setUsername()
            + toString()
            # canEqual()
            ~ NewUserJoinTeamResponse()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      namespace response {
        class survival2d.lobby.network.response.NewUserJoinTeamResponse.NewUserJoinTeamResponseBuilder {
            - username : String
            + build()
            + toString()
            + username()
            ~ NewUserJoinTeamResponseBuilder()
        }
      }
    }
  }
  

  survival2d.lobby.network.response.CreateTeamResponse +-down- survival2d.lobby.network.response.CreateTeamResponse.CreateTeamResponseBuilder
  survival2d.lobby.network.response.FindMatchResponse o-- survival2d.common.ResponseError : result
  survival2d.lobby.network.response.FindMatchResponse +-down- survival2d.lobby.network.response.FindMatchResponse.FindMatchResponseBuilder
  survival2d.lobby.network.response.FindMatchResponse +-down- survival2d.lobby.network.response.FindMatchResponse.FindMatchResponseWriter
  survival2d.lobby.network.response.FindMatchResponse.FindMatchResponseBuilder o-- survival2d.common.ResponseError : result
  survival2d.lobby.network.response.FindMatchResponse.FindMatchResponseWriter .up.|> com.tvd12.ezyfox.binding.EzyWriter
  survival2d.lobby.network.response.GetConfigResponse o-- survival2d.match.config.GameConfig : map
  survival2d.lobby.network.response.GetConfigResponse +-down- survival2d.lobby.network.response.GetConfigResponse.GetConfigResponseBuilder
  survival2d.lobby.network.response.GetConfigResponse +-down- survival2d.lobby.network.response.GetConfigResponse.Writer
  survival2d.lobby.network.response.GetConfigResponse.GetConfigResponseBuilder o-- survival2d.match.config.GameConfig : map
  survival2d.lobby.network.response.GetConfigResponse.Writer -up-|> survival2d.util.packet.AbstractResponseWriter
  survival2d.lobby.network.response.GetUserInfoResponse +-down- survival2d.lobby.network.response.GetUserInfoResponse.GetUserInfoResponseBuilder
  survival2d.lobby.network.response.JoinTeamResponse o-- survival2d.lobby.entity.JoinTeamResult : result
  survival2d.lobby.network.response.JoinTeamResponse +-down- survival2d.lobby.network.response.JoinTeamResponse.JoinTeamResponseBuilder
  survival2d.lobby.network.response.JoinTeamResponse.JoinTeamResponseBuilder o-- survival2d.lobby.entity.JoinTeamResult : result
  survival2d.lobby.network.response.NewUserJoinTeamResponse +-down- survival2d.lobby.network.response.NewUserJoinTeamResponse.NewUserJoinTeamResponseBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
